实验数据和结果/GenProg4Java/Math/8b/logSeed3.txt
0 [main] DEBUG clegoues.genprog4java.fitness.Fitness  - parsing granularity, value: class
22 [main] DEBUG clegoues.genprog4java.fitness.Fitness  - parsing granularity, value: class
#Tue Mar 09 02:00:22 CST 2021
negativeTestWeight=2.0
classSourceFolder=/home/rtx/repair/d4j/Math/8b/target/classes
model=default
sampleStrategy=variant
srcClassPath=/home/rtx/repair/d4j/Math/8b/target/classes
sourceVersion=1.8
popsize=40
regenPaths=false
posCoverageFile=coverage.path.pos
continue=false
edits=APPEND;DELETE;REPLACE
negCoverageFile=coverage.path.neg
workingDir=/home/rtx/repair/d4j/Math/8b/
clearTestCache=false
skipFailedSanity=false
sample=0.1 
oracleGenome=
testGranularity=class
justTestingFaultLoc=false
faultLocStrategy=standardPathFile
crossp=0.5
pMutation=1
generations=10
positiveTests=/home/rtx/repair/d4j/Math/8b/pos.tests
javaVM=/home/rtx/java/jdk1.8.0_271/jre/bin/java
seed=3
negativePathWeight=0.35
compileCommand=
fixStrategy=classScope
allowCoverageFail=false
targetClassName=/home/rtx/repair/d4j/Math/8b/bugfiles.txt
javaRuntime=java.lang.Runtime@6576fe71
classTestFolder=
modelPath=OVERALLModel.txt
sanity=yes
positivePathWeight=0.65
jacocoPath=/home/rtx/eclipse-workspace/genprog4java/lib/jacocoagent.jar
negativeTests=/home/rtx/repair/d4j/Math/8b/neg.tests
pathToFileHumanInjectedFaultLoc=fileHumanInjectedFaultLoc.txt
outputDir=/home/rtx/repair/d4j/Math/8b/genprog4java/variantSeed3/
testClassPath=/home/rtx/repair/d4j/Math/8b/target/classes\:/home/rtx/repair/d4j/Math/8b/target/test-classes\:/home/rtx/repair/defects4j/framework/projects/lib/junit-4.11.jar\:/home/rtx/repair/d4j/Math/8b/lib/junit-4.8.2.jar
faultStrategy=classScope
sourceDir=src/main/java
checkSpace=false
search=gp
globalExtension=.java
faultSpaceSubSet=1/5
maxVariants=50
libs=/home/rtx/eclipse-workspace/genprog4java/lib/junittestrunner.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/commons-cli-20040117.000000.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/junit-4.12.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/hamcrest-core-1.3.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/log4j-1.2.17.jar\:/home/rtx/repair/d4j/Math/8b/target/classes\:/home/rtx/repair/d4j/Math/8b/target/test-classes\:/home/rtx/repair/defects4j/framework/projects/lib/junit-4.11.jar\:/home/rtx/repair/d4j/Math/8b/lib/junit-4.8.2.jar\:/home/rtx/repair/d4j/Math/8b/target/classes
crossover=onepoint
95 [main] INFO clegoues.genprog4java.main.Main  - Configuration file loaded
Deserialized fitnessCache HashMap
9822 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - loaded from source clegoues.genprog4java.java.ClassInfo@bb9e1fbf
9822 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - sanity checking begins
10273 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - Checking test number 1 out of 1
10538 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - true (1)

10538 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - 	n1: 
10786 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - false (0)

10786 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - sanity checking completed (time taken = 964)
10787 [main] INFO clegoues.genprog4java.localization.DefaultLocalization  - Start Fault Localization
10799 [main] INFO clegoues.genprog4java.localization.DefaultLocalization  - Finish Fault Localization
10799 [main] INFO clegoues.genprog4java.Search.Search  - search: genetic algorithm begins

10827 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 original (stored at: )
10990 [main] ERROR clegoues.genprog4java.rep.JavaRepresentation  - org/apache/commons/math3/distribution/DiscreteDistribution.java:159: error: cannot find symbol
			singletons.add(sample.getKey());
			               ^
  symbol:   variable sample
  location: class DiscreteDistribution<T>
  where T is a type-variable:
    T extends Object declared in class DiscreteDistribution
org/apache/commons/math3/distribution/DiscreteDistribution.java:165: error: cannot find symbol
            if (randomValue < sum) {
                ^
  symbol:   variable randomValue
  location: class DiscreteDistribution<T>
  where T is a type-variable:
    T extends Object declared in class DiscreteDistribution
Note: org/apache/commons/math3/distribution/DiscreteDistribution.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors

10990 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - StmtAppend(32,9) at variant0 fails to compile

10990 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtAppend(32,9) (stored at: variant0)
11066 [main] ERROR clegoues.genprog4java.rep.JavaRepresentation  - org/apache/commons/math3/distribution/DiscreteDistribution.java:167: error: cannot find symbol
			if (sample.getValue() < 0) {
			    ^
  symbol:   variable sample
  location: class DiscreteDistribution<T>
  where T is a type-variable:
    T extends Object declared in class DiscreteDistribution
org/apache/commons/math3/distribution/DiscreteDistribution.java:168: error: cannot find symbol
				throw new NotPositiveException(sample.getValue());
				                               ^
  symbol:   variable sample
  location: class DiscreteDistribution<T>
  where T is a type-variable:
    T extends Object declared in class DiscreteDistribution
Note: org/apache/commons/math3/distribution/DiscreteDistribution.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors

11067 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - StmtAppend(34,10) at variant1 fails to compile

11067 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtAppend(34,10) (stored at: variant1)
11146 [main] ERROR clegoues.genprog4java.rep.JavaRepresentation  - org/apache/commons/math3/distribution/DiscreteDistribution.java:167: error: cannot find symbol
			probability += probabilities[i];
			^
  symbol:   variable probability
  location: class DiscreteDistribution<T>
  where T is a type-variable:
    T extends Object declared in class DiscreteDistribution
Note: org/apache/commons/math3/distribution/DiscreteDistribution.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

11146 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - StmtAppend(35,23) at variant2 fails to compile

11146 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtAppend(35,23) (stored at: variant2)
11216 [main] ERROR clegoues.genprog4java.rep.JavaRepresentation  - org/apache/commons/math3/distribution/DiscreteDistribution.java:186: error: unreachable statement
			if (sampleSize <= 0) {
			^
Note: org/apache/commons/math3/distribution/DiscreteDistribution.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

11217 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - StmtAppend(43,42) at variant3 fails to compile

11217 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtAppend(43,42) (stored at: variant3)
11222 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 3.0 StmtDelete(47) (stored at: )
11222 [main] INFO clegoues.genprog4java.Search.Search  - 
Repair Found: StmtDelete(47) (in )

11246 [main] INFO clegoues.genprog4java.fitness.Fitness  - Serialized test cache to file testcache.ser
11247 [main] INFO clegoues.genprog4java.main.Main  - 
Total elapsed time: 11

